@@ -1,3 +1,8 @@
+2002-10-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-goto-url): Display a help message to stop
+	asynchronous process.
+
 2002-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-form.el (w3m-form-input-textarea-keymap): Don't bind C-g.
